docz configured at project, remove unecessary files, added paths o the gitignore

--- a/package.json
+++ b/package.json
@@ -14,22 +14,20 @@
     "keepfy"
   ],
   "scripts": {
-    "start": "tsc && react-scripts start",
-    "build": "tsc && react-scripts build",
-    "lint": "eslint 'src/**/*.ts?(x)'",
-    "prepare": "rm -rf ./lib/* && yarn lint && yarn build"
+    "start": "docz dev",
+    "build": "docz build",
+    "serve": "docz build && docz serve"
   },
   "dependencies": {
+    "docz": "2.1.1",
     "react": "16.12.0",
-    "react-dom": "16.12.0",
-    "react-scripts": "3.2.0"
+    "react-dom": "16.12.0"
   },
   "devDependencies": {
     "@types/react": "16.9.14",
     "eslint": "6.7.2",
     "eslint-config-keepfy": "7.0.0",
-    "eslint-plugin-import": "2.18.2",
-    "typescript": "3.7.3"
+    "eslint-plugin-import": "2.18.2"
   },
   "browserslist": {
     "production": [
