--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "react-dom": "16.12.0"
   },
   "devDependencies": {
-    "date-fns": "2.4.1",
     "@types/echarts": "4.4.1",
     "@types/ramda": "0.26.36",
     "@types/react": "16.9.14",
+    "brazilian-values": "0.7.0",
+    "date-fns": "2.4.1",
     "echarts": "4.5.0",
     "echarts-for-react": "2.0.15-beta.1",
     "eslint": "6.7.2",
