--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "preserveConstEnums": true,
     "removeComments": true,
     "sourceMap": true,
-    "target": "es5"
+    "target": "es5",
+    "declaration": true
   },
   "include": [
     "./src/**/**/*"
