linter fixes, move types, remove rule to non use of magic numbers

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,5 +3,8 @@
     "extends": [
       "keepfy",
       "plugin:import/typescript"
-    ]
+    ],
+    "rules": {
+      "no-magic-numbers": "off"
+    }
 }
