--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   ],
   "scripts": {
     "start": "tsc && docz dev",
-    "build:ts": "tsc --emitDeclarationOnly",
-    "build": "yarn build:ts && docz build ",
+    "build:ts": "tsc",
+    "build": "rm -rf build && yarn build:ts",
     "serve": "docz build && docz serve",
     "lint": "eslint 'src/**/*.ts?(x)'",
     "prepack": "yarn build"
