--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@keepfy/react-charts",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "A react charts package based in echarts",
   "author": "Leonardo Filipe Rigon",
   "license": "MIT",
@@ -10,7 +10,9 @@
   "keywords": [
     "keepfy",
     "charts",
-    "echarts"
+    "echarts",
+    "react",
+    "canvas"
   ],
   "scripts": {
     "start": "tsc && docz dev",
