--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@keepfy/react-charts",
-  "version": "0.1.3",
+  "version": "0.1.5",
   "description": "A react charts package based in echarts",
   "author": "Leonardo Filipe Rigon",
   "license": "MIT",
@@ -25,7 +25,9 @@
   "dependencies": {
     "docz": "2.1.1",
     "react": "16.12.0",
-    "react-dom": "16.12.0"
+    "react-dom": "16.12.0",
+    "echarts": "4.5.0",
+    "echarts-for-react": "2.0.15-beta.1"
   },
   "devDependencies": {
     "@types/echarts": "4.4.1",
@@ -33,8 +35,6 @@
     "@types/react": "16.9.14",
     "brazilian-values": "0.7.0",
     "date-fns": "2.4.1",
-    "echarts": "4.5.0",
-    "echarts-for-react": "2.0.15-beta.1",
     "eslint": "6.7.2",
     "eslint-config-keepfy": "7.0.0",
     "eslint-plugin-import": "2.18.2",
