--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
   },
   "dependencies": {
     "docz": "2.1.1",
-    "react": "16.12.0",
-    "react-dom": "16.12.0",
     "echarts": "4.5.0",
-    "echarts-for-react": "2.0.15-beta.1"
+    "echarts-for-react": "2.0.15-beta.1",
+    "react": "16.12.0",
+    "react-dom": "16.12.0"
   },
   "devDependencies": {
     "@types/echarts": "4.4.1",
