--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "removeComments": true,
     "sourceMap": true,
     "target": "es5",
-    "declaration": true
+    "declaration": true,
+    "skipLibCheck": true
   },
   "include": [
     "./src/**/*"
