--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@keepfy/react-charts",
-  "version": "0.1.19",
+  "version": "0.1.20",
   "description": "A react charts package based in echarts",
   "author": "Leonardo Filipe Rigon",
   "license": "MIT",
@@ -23,7 +23,6 @@
     "prepack": "yarn build"
   },
   "dependencies": {
-    "docz": "2.1.1",
     "echarts": "4.6.0",
     "echarts-for-react": "2.0.15-beta.1",
     "react": "16.12.0",
@@ -38,7 +37,8 @@
     "eslint": "6.7.2",
     "eslint-config-keepfy": "7.0.0",
     "eslint-plugin-import": "2.18.2",
-    "ramda": "0.26.1"
+    "ramda": "0.26.1",
+    "docz": "2.1.1"
   },
   "browserslist": {
     "production": [
