--- a/package.json
+++ b/package.json
@@ -34,11 +34,11 @@
     "@types/react": "16.9.14",
     "brazilian-values": "0.7.0",
     "date-fns": "2.4.1",
+    "docz": "2.1.1",
     "eslint": "6.7.2",
     "eslint-config-keepfy": "7.0.0",
     "eslint-plugin-import": "2.18.2",
-    "ramda": "0.26.1",
-    "docz": "2.1.1"
+    "ramda": "0.26.1"
   },
   "browserslist": {
     "production": [
