chore(general-fixes): remove unecessary console.log on horizontal bar chart, disable max-line rule on eslint.json

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,7 @@
       "plugin:import/typescript"
     ],
     "rules": {
-      "no-magic-numbers": "off"
+      "no-magic-numbers": "off",
+      "max-lines": "off"
     }
 }
